<resources>
    <string name="app_name">VhortextTest</string>
    <string name="font_bold">font/Roboto-Regular_1.ttf</string>
    <string name="font">font/Roboto-Light_1.ttf</string>
    <string name="hello_world">Hello world!</string>
    <string name="text_member">Member</string>
    <string name="text_admin">Admin</string>
    <string name="no_internet">No internet connection available!</string>
    <string name="already_paired">You are already registered with another device. Do you want to proceed using this device?</string>
    <string name="et_hint_phone_number">Enter mobile number</string>
    <string name="alert_no_country">Please enter your country code.</string>
    <string name="alert_enter_name">Please enter your name.</string>
    <string name="alert_enter_mobile_number">Please enter your mobile number.</string>
    <string name="text_profile_name">Bobby Mackenna</string>
    <string name="text_profile_status">Check out my new icons!!</string>
    <string name="receive_at">Received</string>
    <string name="sent_at">Sent</string>
    <string name="frined_name">Friend Name</string>
    <string name="text_group_name">My Friends</string>
    <string name="text_group_status">We are friends..</string>
    <string name="invite">Invite Friends</string>
    <string name="edit">Edit Profile</string>
    <string name="view_block_user">View Block User</string>
    <string name="update_status">Update Status</string>
    <string name="delete_acc">Delete Account</string>
    <string name="settings">Settings</string>
    <string name="provide_grp_sub_icon">Please provide group subject and optional group icon</string>
    <string name="group_text">Type group subject here...</string>
    <string name="provide_grp_sub_icon_new">SET PROFILE PICTURE</string>
    <string name="group_name_text">Group Name: </string>
    <string name="chats">Chats</string>
    <string name="favorite">Favorites</string>
    <string name="groups">Groups</string>
    <string name="contacts">Contacts</string>
    <string name="more">More</string>
    <string name="newGroup">New Group</string>
    <string name="editGroup">Edit Group</string>
    <string name="blockUser">Block User</string>
    <string name="editProfile">Edit Profile</string>
    <string name="updateStatus">Status</string>
    <string name="selectCountry">Select Country</string>
    <string name="findPeople">Find People</string>
    <string name="shareImage">Share Image</string>
    <string name="choosePeople">Choose People</string>
    <string name="authentication">Authentication</string>
    <string name="selectLanguage">Select Language</string>
    <string name="friendProfile">Friend Profile</string>
    <string name="inviteFriends">Invite Friends</string>
    <string name="setLocation">Set Location</string>
    <string name="viewLocation">View Location</string>
    <string name="ActivityYouTubeVideoList">YouTube</string>
    <string name="ActivityYahooNewsList">Yahoo News</string>
    <string name="registration">Registration</string>
    <string name="authentication_text"> We have sent a sms with activation code to your phone</string>
    <string name="verification_text">We have sent a sms with activation code to your phone</string>
    <string name="device_activation_text">Your device is not active now</string>
    <string name="for_device_activation_text">for activate this device</string>
    <string name="reset_ph_no">Re-enter phone number</string>
    <string name="resend_code">Resend verification code</string>
    <string name="send_code">Send verification code</string>
    <string name="add_at_least_two_memeber">Add atleast two member to create</string>
    <string name="select_at_least_one_friend">Please select a friend to send invitation</string>
    <string name="hint_search">search...</string>
    <string name="find_me_by_location">Find Me by My Location</string>
    <string name="find_me_by_ph_no">Keep My Phone Number Private</string>
    <string name="about">About</string>
    <string name="help">Help/FAQ</string>
    <string name="contact_us">Contact Us</string>
    <string name="copyright_info">Copyright info</string>
    <string name="clear_conversation">Clear Conversation</string>
    <string name="email_conversation">Email Conversation</string>
    <string name="block">Block</string>
    <string name="delete_text">Do you want to delete ?</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="clear_conv">All conversation deleted successfully</string>
    <string name="acc_delete_text">Do you want to delete this account?</string>
    <string name="invite_text">Do you want to invite %1$s?</string>
    <string name="invite_text_generic">Do you want to invite this friend?</string>
    <string name="unblock_text">Do you want to unblock this person ?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="choose_gender">Choose Your Gender</string>
    <string name="female">Female</string>
    <string name="reg_confirmation_text">Do you want to register with</string>
    <string name="confirm">Confirm</string>
    <string name="view_profile">View Profile</string>
    <string name="unblock">Unblock</string>
    <string name="promote">Promote</string>
    <string name="demote">Demote</string>
    <string name="remove">Remove</string>
    <string name="addToContact">Add To Contact</string>
    <string name="your_currnt_status">Your current status</string>
    <string name="select_new_status">Select your new status</string>
    <string name="send">Send</string>
    <string name="ad_caption">Add a caption...</string>
    <string name="my_contacts">Search My Vhortext Contacts</string>
    <string name="nearby_user">Search with Nearby Users</string>
    <string name="around_globe">Search around the Globe</string>
    <string name="et_hint_chat">Enter message</string>
    <string name="video">Video</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="location">Location</string>
    <string name="contact">Contact</string>
    <string name="youtube">YouTube</string>
    <string name="news">News</string>
    <string name="sketch">Sketch</string>
    <string name="toast_block_user">You have blocked this person</string>
    <string name="search_your_country">Search Your Country</string>
    <string name="classmate">Classmate</string>
    <string name="friend">Friend</string>
    <string name="acquaintance">Acquaintance</string>
    <string name="coworker">Co-worker</string>
    <string name="colleague">Colleague</string>
    <string name="other">Other</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="select_gender">Select Gender</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="save">Save</string>
    <string name="et_search_hint">Search by Name or Phone No</string>
    <string name="media">Media</string>
    <string name="admin">Admin</string>
    <string name="exitGroup">Exit Group</string>
    <string name="participants">Members</string>
    <string name="blockParticipants">Blocked Members</string>
    <string name="share_img_limit">Maximum 10 items please</string>
    <string name="share_no_image_selected">No image selected</string>
    <string name="invite_send_succ">Your invitation sent successfully</string>
    <string name="invite_unsucc">Unsuccessful to send your invitation</string>
    <string name="title_activity_maps">Map</string>
    <string name="no_data">No Data available</string>
    <string name="no_search">No search data available</string>
    <string name="network_try">Something went wrong! Please try again.</string>
    <string name="profile_update_success">Profile updated successfully.</string>
    <string name="ContactBroadcast">Vhortext.ContactSync</string>
    <string name="gps_settings_header">GPS settings</string>
    <string name="gps_not_enabled_redirect_message">GPS is not enabled. Do you want to go to settings menu?</string>
    <string name="email_subject">Vhortext Chat with</string>
    <string name="no_fav_list">No favorite found.</string>
    <string name="no_contacts_list">No contacts found.</string>
    <string name="no_group_list">No group found.</string>
    <string name="select_lang_hint">Select your language</string>
    <string name="contact_details">Contact Details</string>
    <string name="view_location">View Location</string>
    <string name="address_not_available">Address not available. Please try again.</string>
    <string name="cotact_pick_no_number">Seems like something error in your selected number. Please try again.</string>
    <string name="contact_pick_no_number">Please select at least one number to send</string>
    <string name="translation_off">Translation Off</string>
    <string name="translation_on">Translation On</string>
    <string name="notification_off">Notification Off</string>
    <string name="notification_on">Notification On</string>
    <string name="retry_settings_location_alert">Your location service is off please activate location service to search</string>
    <string name="around_the_globe">Around The Globe</string>
    <string name="no_people_found">No Search Result Found</string>
    <string name="alert.failure.video_pick">Failed to fetch video</string>
    <string name="alert.failure.video_path_empty">Empty or corrupted video file</string>
    <string name="alert.failure.video_player_not_found">No supported video player found</string>
    <string name="alert.error.invalid_phone_number">Please provide a valid mobile number</string>
    <string name="error.label.no_blocked_user">No blocked user found</string>
    <string name="no_conversation_found">No Conversation Found</string>
    <string name="ok">Ok</string>
    <string name="alert.warn.user_blocked_need_to_unblock_to_favourite">Friend needs to be unblocked to make as favorite</string>
    <string name="alert.warn.friend_will_be_unfavourite_once_block">Friend will be unfavorite once you block</string>
    <string name="alert.failure.unknown_error">Something went wrong. Please try again </string>
    <string name="alert.failure.network_time_out">Connection timed out</string>
    <string name="alert.failure.network_connection_failed">Failed to connect. Please check your internet connection</string>
    <string name="alert.failure.server_connection_failed_">Failed to connect to server. Please try again</string>
    <string name="no_description">No description</string>
    <string name="alert_failure_yahoo_not_found">"No supported browser found. "</string>
    <string name="copyrights">Copyright @2015 Vhortext. All rights reserved.</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="add_attachment">Add attachments (optional):</string>
    <string name="chooserIntent">Select Source</string>
    <string name="alert_select_country_error_new">Failed to detect Country code. Please enter the country code</string>
    <string name="title_activity_activity_tutorial">ActivityTutorial</string>
    <string name="you">You</string>
    <string name="please_wait">Please wait</string>
    <string name="alert_leave_group">Sure you want to exit this group?</string>
    <string name="gender_all">All</string>
    <string name="crop_image_menu_chose">Chose</string>
    <string name="main_action_crop">SAVE</string>
    <string name="main_action_rotate">Rotate 90 degrees clockwise</string>
    <string name="main_action_flip">Flip</string>
    <string name="main_action_flip_horizontally">Flip horizontally</string>
    <string name="main_action_flip_vertically">Flip vertically</string>
    <string name="done">Done</string>
    <string name="ic_clear_all">"\ue947"</string>
    <string name="ic_delete">"\ue92c"</string>
    <string name="undo">Undo</string>
</resources>