<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:wachat="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/reg_bg_bottom"
    android:paddingBottom="@dimen/p_bottom_dialog_del"
    android:layout_marginLeft="@dimen/m_dialog_lr"
    android:layout_marginRight="@dimen/m_dialog_lr">

    <apps.lnsel.com.vhortexttest.helpers.CustomViews.ChatTextView
        android:id="@+id/dialog_common_header_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/p_dialog_del_t"
        android:padding="5dp"
        android:text="@string/delete_text"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_size_xlarge"
        wachat:customFont="@string/font_bold"/>


    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@id/dialog_common_header_txt"
        android:layout_margin="5dp"
        android:background="@color/view_gray_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/view"
        android:background="@color/view_gray_color">

        <apps.lnsel.com.vhortexttest.helpers.CustomViews.ChatTextView
            android:id="@+id/tv_dialog_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="0.10dp"
            android:layout_weight="1"
            android:background="@color/reg_bg_bottom"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/cancel"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size_large"
            wachat:customFont="@string/font" />

        <apps.lnsel.com.vhortexttest.helpers.CustomViews.ChatTextView
            android:id="@+id/tv_dialog_ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0.10dp"
            android:layout_weight="1"
            android:background="@color/reg_bg_bottom"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/delete"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size_large"
            wachat:customFont="@string/font" />
    </LinearLayout>

</RelativeLayout>
