<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:wachat="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/m_dialog_lr"
    android:layout_marginRight="@dimen/m_dialog_lr"
    android:background="@color/reg_bg_bottom"
    android:orientation="vertical"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/block_user_popup_top"
        android:padding="@dimen/p_tv">

        <apps.lnsel.com.vhortexttest.helpers.CustomViews.ChatTextView
            android:id="@+id/tv_clear_conversation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="@dimen/text_size_xlarge"
            wachat:customFont="@string/font_bold"
            android:textColor="@android:color/white"/>

        <ImageView
            android:id="@+id/iv_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_blocked_user_pop_close_icon" />
    </RelativeLayout>


    <apps.lnsel.com.vhortexttest.helpers.CustomViews.ChatTextView
        android:id="@+id/tv_view_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/p_tv"
        android:text="@string/view_profile"
        android:textSize="@dimen/text_size_xlarge"
        wachat:customFont="@string/font"
        android:textColor="@android:color/black"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/h_view"
        android:background="@color/view_gray_color" />

    <apps.lnsel.com.vhortexttest.helpers.CustomViews.ChatTextView
        android:id="@+id/tv_promote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/p_tv"
        android:text="@string/promote"
        android:textSize="@dimen/text_size_xlarge"
        wachat:customFont="@string/font"
        android:textColor="@android:color/black"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/h_view"
        android:background="@color/view_gray_color" />

    <apps.lnsel.com.vhortexttest.helpers.CustomViews.ChatTextView
        android:id="@+id/tv_remove"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/p_tv"
        android:text="@string/remove"
        android:textSize="@dimen/text_size_xlarge"
        wachat:customFont="@string/font"
        android:textColor="@android:color/black"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/h_view"
        android:background="@color/view_gray_color" />

    <apps.lnsel.com.vhortexttest.helpers.CustomViews.ChatTextView
        android:id="@+id/tv_block"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/p_tv"
        android:text="@string/block"
        android:textSize="@dimen/text_size_xlarge"
        wachat:customFont="@string/font"
        android:textColor="@android:color/black"/>
</LinearLayout>
