<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:wachat="http://schemas.android.com/apk/res-auto">


    <include
        android:id="@+id/appBar"
        layout="@layout/toolbar_custom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true" />

    <LinearLayout
        android:id="@+id/lnr_Bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:padding="@dimen/p_btn">


        <apps.lnsel.com.vhortexttest.helpers.CustomViews.ChatTextView
            android:id="@+id/tv_save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/ic_edit_profile_save_button"
            android:gravity="center"
            android:text="@string/save"
            android:padding="@dimen/p_btn"
            android:textAllCaps="false"
            android:textColor="@color/view_yellow_color"
            android:textSize="@dimen/text_size_large"
            wachat:customFont="@string/font" />


        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="0.1" />

        <apps.lnsel.com.vhortexttest.helpers.CustomViews.ChatTextView
            android:id="@+id/tv_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/ic_edit_profile_cancel_button"
            android:gravity="center"
            android:padding="@dimen/p_btn"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/view_yellow_color"
            android:textSize="@dimen/text_size_large"
            wachat:customFont="@string/font" />

    </LinearLayout>
    <ListView
        android:id="@+id/contact_ph_num_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"
        android:layout_below="@id/appBar"
        android:layout_above="@id/lnr_Bottom"
        android:scrollbars="none"></ListView>

</RelativeLayout>
