<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_Brown"
    android:fitsSystemWindows="true">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <RelativeLayout
            android:id="@+id/bottom_parent_rl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:paddingLeft="26dp"
            android:paddingRight="26dp"
            android:visibility="visible">



            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:gravity="center_horizontal">

                <TextView
                    android:id="@+id/undo_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="4dp"

                    android:text="@string/ic_clear_all"
                    android:textColor="#FFFFFF"
                    android:textSize="25sp"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/undo_text_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/undo"
                    android:textColor="#FFFFFF"
                    android:textSize="15sp"

                    android:visibility="gone" />
            </LinearLayout>







        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/delete_rl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:padding="20dp"
            android:visibility="gone">

            <TextView
                android:id="@+id/delete_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@drawable/rounded_border_text_view"
                android:padding="5dp"
                android:text="@string/ic_delete"
                android:textColor="#FFFFFF"
                android:textSize="25sp" />

        </RelativeLayout>


        <android.support.v7.widget.RecyclerView
            android:id="@+id/drawing_view_color_picker_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_alignParentBottom="true" />


        <TextView
            android:id="@+id/done_drawing_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:padding="20dp"
            android:layout_centerHorizontal="true"
            android:shadowColor="#000000"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="2"
            android:text="@string/done"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:visibility="gone" />


        <RelativeLayout
            android:id="@+id/parent_image_rl"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#ffffff"
            android:layout_marginBottom="70dp">

            <ImageView
                android:id="@+id/photo_edit_iv"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_centerInParent="true"
                android:adjustViewBounds="true"
                android:contentDescription="@string/app_name"
                android:scaleType="centerCrop" />

            <!--android:background="#ffffff"-->

            <apps.lnsel.com.vhortexttest.photoannotatesdk.BrushDrawingView
                android:id="@+id/drawing_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone" />

            <!-- -->

        </RelativeLayout>

        <View
            android:id="@+id/top_shadow"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_alignParentTop="true"
            android:visibility="visible" />
        <!--android:background="@drawable/fading_shadow" -->

        <View
            android:id="@+id/bottom_shadow"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:visibility="visible"
            android:layout_alignParentBottom="true"/>
        <!--android:background="@drawable/below_shadow" -->



    </RelativeLayout>


</RelativeLayout>